src/main/java/semantic/abstractSintaxTree/test/passing/arrayAccess.ru
start {
    Str a;
    Int y;
    Array Str x;
    x = new Str[y];
    a = x[y-1];
}
