src/main/java/semantic/abstractSintaxTree/test/failing/nonIntArrayIndex.ru
/? NonIntArrayIndexException
start {
    Array Int a;
    a = new Int[10];

    (IO.out_int(a[(1 + 2) == (3 + 4)]));
}